# dcf39_decoder

./: .gitignore  README.md  decoder.py  requirements.txt
c/: CMakeLists.txt
c/include/: dcf39_decoder.h
c/src/: dcf39_decoder.c  main.c
